common/force-app/main/default/objects/Mobile_Call__c/Mobile_Call__c.object-meta.xml
<CustomObject>
    <label>Mobile Call</label>
    <nameField>
        <displayFormat>CALL-{000000}</displayFormat>
        <label>Mobile Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>