common/force-app/main/default/objects/Mobile_Call__c/fields/Aircall_ID__c.field-meta.xml
<CustomField>
    <fullName>Aircall_ID__c</fullName>
    <label>Aircall ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>