common/force-app/main/default/objects/Mobile_Call__c/fields/Call_direction__c.field-meta.xml
<CustomField>
    <fullName>Call_direction__c</fullName>
    <label>Call direction</label>
    <length>200</length>
    <type>Text</type>
</CustomField>