common/force-app/main/default/objects/Mobile_Call__c/fields/Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration__c</fullName>
    <formula>IF(
  Call_Duration_in_Seconds__c &lt; 60,
  TEXT(Call_Duration_in_Seconds__c) &amp; &quot; seconds&quot;,
  TEXT(ROUND(Call_Duration_in_Seconds__c / 60, 2)) &amp; &quot; minutes&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Duration</label>
    <type>Text</type>
</CustomField>