common/force-app/main/default/objects/Mobile_Call__c/fields/Call_Duration_in_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_in_Seconds__c</fullName>
    <label>Call Duration in Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>