common/force-app/main/default/objects/Mobile_Call__c/fields/call_notes__c.field-meta.xml
<CustomField>
    <fullName>call_notes__c</fullName>
    <description>Summary of the call</description>
    <label>Call Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>