common/force-app/main/default/objects/Mobile_Call__c/fields/Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording__c</fullName>
    <label>Call Recording</label>
    <type>Url</type>
</CustomField>