common/force-app/main/default/objects/Mobile_Call__c/fields/Call_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Call_Resolution__c</fullName>
    <description>Call resolution field that will synch back to the Voice Call Record</description>
    <label>Call Resolution</label>
    <type>TextArea</type>
</CustomField>