common/force-app/main/default/objects/Mobile_Call__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Mobile Calls</relationshipLabel>
    <relationshipName>Mobile_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>