common/force-app/main/default/objects/Mobile_Call__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Mobile Calls</relationshipLabel>
    <relationshipName>Mobile_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>