common/force-app/main/default/objects/Mobile_Call__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <description>Recipient Number Dupe of the Voice Call Object. It&apos;s used to show this field in the mobile version Updated through a flow.</description>
    <label>Customer Number</label>
    <type>Phone</type>
</CustomField>