common/force-app/main/default/objects/Mobile_Call__c/fields/EOI__c.field-meta.xml
<CustomField>
    <fullName>EOI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EOI</label>
    <referenceTo>EOI__c</referenceTo>
    <relationshipLabel>Mobile Calls</relationshipLabel>
    <relationshipName>Mobile_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>