common/force-app/main/default/objects/Mobile_Call__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>TextArea</type>
</CustomField>