common/force-app/main/default/objects/Mobile_Call__c/fields/Internal_Number__c.field-meta.xml
<CustomField>
    <fullName>Internal_Number__c</fullName>
    <description>Dupe of the Voice Call Object. It&apos;s used to show this field in the mobile version</description>
    <label>Internal Number</label>
    <type>Phone</type>
</CustomField>