common/force-app/main/default/objects/Mobile_Call__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Mobile Calls</relationshipLabel>
    <relationshipName>Mobile_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>