common/force-app/main/default/objects/Mobile_Call__c/fields/Master_Plan__c.field-meta.xml
<CustomField>
    <fullName>Master_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Plan</label>
    <referenceTo>Masterplan__c</referenceTo>
    <relationshipLabel>Mobile Calls</relationshipLabel>
    <relationshipName>Mobile_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>