common/force-app/main/default/objects/Mobile_Call__c/fields/Missed_Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>Missed_Call_Reason__c</fullName>
    <label>Missed Call Reason</label>
    <type>TextArea</type>
</CustomField>