common/force-app/main/default/objects/Mobile_Call__c/fields/No_Account_Found__c.field-meta.xml
<CustomField>
    <fullName>No_Account_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked we weren&apos;t able to find an account with this mobile number. Please edit the mobile number or create a lead with this mobile number.</inlineHelpText>
    <label>No Account Found</label>
    <type>Checkbox</type>
</CustomField>