common/force-app/main/default/objects/Mobile_Call__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <description>Dupe of the Voice Call Object. It&apos;s used to show this field in the mobile version</description>
    <label>Owner Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>