common/force-app/main/default/objects/Mobile_Call__c/fields/Product_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Product_Feedback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Feedback</label>
    <referenceTo>Product_Feedback__c</referenceTo>
    <relationshipLabel>Mobile Calls</relationshipLabel>
    <relationshipName>Mobile_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>