common/force-app/main/default/objects/Mobile_Call__c/fields/Raise__c.field-meta.xml
<CustomField>
    <fullName>Raise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raise</label>
    <referenceTo>Raise__c</referenceTo>
    <relationshipLabel>Mobile Calls</relationshipLabel>
    <relationshipName>Mobile_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>