common/force-app/main/default/objects/Mobile_Call__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRC</fullName>
            </value>
            <value>
                <fullName>IM</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
            </value>
            <value>
                <fullName>Ventures</fullName>
            </value>
            <value>
                <fullName>VCPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>