common/force-app/main/default/objects/Mobile_Call__c/fields/Transferred_by__c.field-meta.xml
<CustomField>
    <fullName>Transferred_by__c</fullName>
    <label>Transferred by</label>
    <length>200</length>
    <type>Text</type>
</CustomField>