common/force-app/main/default/objects/Mobile_Call__c/fields/Transferred_to__c.field-meta.xml
<CustomField>
    <fullName>Transferred_to__c</fullName>
    <label>Transferred to</label>
    <length>200</length>
    <type>Text</type>
</CustomField>