common/force-app/main/default/objects/Mobile_Call__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call - Inbound</fullName>
            </value>
            <value>
                <fullName>Call - Outbound</fullName>
            </value>
            <value>
                <fullName>Call - Transfer</fullName>
            </value>
            <value>
                <fullName>Call - Missed</fullName>
            </value>
            <value>
                <fullName>Call - Voicemail</fullName>
            </value>
            <value>
                <fullName>SMS - Inbound</fullName>
                <isActive>false</isActive>
                <label>SMS - Inbound</label>
            </value>
            <value>
                <fullName>SMS - Outbound</fullName>
                <isActive>false</isActive>
                <label>SMS - Outbound</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>