common/force-app/main/default/objects/Mobile_Call__c/fields/Voice_Call__c.field-meta.xml
<CustomField>
    <fullName>Voice_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will be filled automatically if the call was transferred form a Landline number to a mobile number,</inlineHelpText>
    <label>Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipName>Calls</relationshipName>
    <type>Lookup</type>
</CustomField>