common/force-app/main/default/objects/Mobile_Call__c/listViews/Missed_Calls.listView-meta.xml
<ListView>
    <fullName>Missed_Calls</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Internal_Number__c</columns>
    <columns>Customer_Number__c</columns>
    <columns>Missed_Call__c</columns>
    <columns>Missed_Call_Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Missed_Call__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Missed Calls</label>
</ListView>