common/force-app/main/default/objects/Mobile_Call__c/listViews/Missed_Calls_Relevant_to_CRC_s.listView-meta.xml
<ListView>
    <fullName>Missed_Calls_Relevant_to_CRC_s</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Team__c</columns>
    <columns>Type__c</columns>
    <columns>Internal_Number__c</columns>
    <columns>Customer_Number__c</columns>
    <columns>Missed_Call__c</columns>
    <columns>Missed_Call_Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>call_notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>CRC,IM,IR</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Call - Missed,Call - Voicemail</value>
    </filters>
    <label>Missed Calls Relevant to CRC&apos;s</label>
</ListView>