common/force-app/main/default/objects/Mobile_Call__c/listViews/Transferred_Calls.listView-meta.xml
<ListView>
    <fullName>Transferred_Calls</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Transferred_by__c</columns>
    <columns>Transferred_to__c</columns>
    <columns>Call_Duration__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Call - Transfer</value>
    </filters>
    <label>Transferred Calls</label>
</ListView>