common/force-app/main/default/objects/Mobile_Call__c/listViews/Ventures_Team_Calls.listView-meta.xml
<ListView>
    <fullName>Ventures_Team_Calls</fullName>
    <columns>NAME</columns>
    <columns>Team__c</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Call_Recording__c</columns>
    <columns>call_notes__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Call - Inbound,Call - Outbound</value>
    </filters>
    <filters>
        <field>Missed_Call__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>Ventures</value>
    </filters>
    <label>Ventures Team Calls</label>
</ListView>